--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.71.8",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-keychain": "^8.1.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
