--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-flash-message": "^0.4.1",
