--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.3.1",
     "react-native-reanimated": "^3.0.1",
+    "react-native-rename": "^3.2.12",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
