--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,11 +95,11 @@ android {
 
     namespace "com.awesomeproject"
     defaultConfig {
-        applicationId "com.gannvwala6.com"
+        applicationId "com.gw.parent"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "1.0"
+        versionCode 3
+        versionName "0.0.2"
     }
 
     splits {
