--- a/ios/AwesomeProject.xcodeproj/xcshareddata/xcschemes/AwesomeProject.xcscheme
+++ b/ios/AwesomeProject.xcodeproj/xcshareddata/xcschemes/AwesomeProject.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AwesomeProject.app"
-               BlueprintName = "AwesomeProject"
-               ReferencedContainer = "container:AwesomeProject.xcodeproj">
+               BuildableName = "GwParent.app"
+               BlueprintName = "GwParent"
+               ReferencedContainer = "container:GwParent.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AwesomeProjectTests.xctest"
-               BlueprintName = "AwesomeProjectTests"
-               ReferencedContainer = "container:AwesomeProject.xcodeproj">
+               BuildableName = "GwParentTests.xctest"
+               BlueprintName = "GwParentTests"
+               ReferencedContainer = "container:GwParent.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeProject.app"
-            BlueprintName = "AwesomeProject"
-            ReferencedContainer = "container:AwesomeProject.xcodeproj">
+            BuildableName = "GwParent.app"
+            BlueprintName = "GwParent"
+            ReferencedContainer = "container:GwParent.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AwesomeProject.app"
-            BlueprintName = "AwesomeProject"
-            ReferencedContainer = "container:AwesomeProject.xcodeproj">
+            BuildableName = "GwParent.app"
+            BlueprintName = "GwParent"
+            ReferencedContainer = "container:GwParent.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
