--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "AwesomeProject",
-  "version": "0.0.2",
+  "name": "gwparent",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -69,6 +69,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
