--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,7 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
-
+android.disableAutomaticComponentCreation=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
@@ -44,6 +44,6 @@ newArchEnabled=false
 hermesEnabled=true
 
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_KEY_ALIAS=my-key-nitesh
 MYAPP_UPLOAD_STORE_PASSWORD=nitesh
 MYAPP_UPLOAD_KEY_PASSWORD=nitesh
