--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "^3.0.1",
     "react-native-rename": "^3.2.12",
     "react-native-responsive-linechart": "^5.7.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-slider": "^0.11.0",
