parent app update 22 july

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,10 +95,10 @@ android {
 
     namespace "com.awesomeproject"
     defaultConfig {
-        applicationId "com.Gws.parents"
+        applicationId "com.Gw.parents"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 14
+        versionCode 15
         versionName "1.0.1"
     }
 
