--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react": "18.2.0",
     "react-native": "^0.71.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^10.8.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.3.1",
     "react-native-pinchable": "^0.2.1",
     "react-native-reanimated": "^3.0.1",
@@ -45,11 +47,13 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-slider": "^0.11.0",
+    "react-native-store-version": "^1.4.1",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-table-component": "^1.2.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-version-check": "^3.4.7",
     "react-native-webview": "^11.26.1",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
