--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-native": "^0.71.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-check-version": "^1.1.1",
     "react-native-device-info": "^10.8.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.4.1",
@@ -47,6 +48,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-slider": "^0.11.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-store-version": "^1.4.1",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
