--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axois": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "link": "^1.5.1",
+    "lottie-react-native": "^6.0.1",
     "react": "18.2.0",
     "react-native": "^0.71.3",
     "react-native-chart-kit": "^6.12.0",
